# quil-qir

./: .gitignore  Cargo.toml  Makefile  Readme.md  package.json
.github/workflows/: release-dryrun.yml
data/: BellState.bc  BellState.ll  BellState.o3.bc  BellState.o3.ll  BellState.program.qs  Emission.bc  Emission.ll  Parametric.bc  Parametric.ll  Parametric.program.qs  ParametricBellState.bc  ParametricBellState.ll  ParametricBellState.o3.bc  ParametricBellState.o3.ll  ParametricBellState.qs  QDKBase.bc  QDKBase.ll  QDKBase.o3.bc  QDKBase.o3.ll
scripts/: build-samples.sh
src/: lib.rs  macros.rs  main.rs
src/environment/: global.rs  local.rs  mod.rs  variable.rs
src/translate/: block.rs  errors.rs  function.rs  mod.rs  module.rs  utilities.rs
test/: rust.py
vagrant/: .gitignore  Vagrantfile
