[package]
name = "quil-qir"
version = "0.2.0"
authors = ["Kalan <ksnyder@rigetti.com>", "Mark Skilbeck <mark.skilbeck@rigetti.com>"]
edition = "2018"

[lib]
name = "quil_qir"
crate-type = ["cdylib"]

[dependencies]
log = "*"
either = "*"
llvm-ir = { version = "0.7.4", features = ["llvm-11"] }
quil = { git = "https://github.com/rigetti/quil-rust.git", tag = "v0.2.3" }
structopt = "0.3.21"
pyo3 = { version = "0.13.2", features = ["extension-module"] }
num-complex = "*"
